--- a/fn/src/index.css
+++ b/fn/src/index.css
@@ -25,6 +25,7 @@ button{
 }
 
 p, h1, h2, h3, h4, h5, h6{
-  /* white-space: nowrap; */
+  white-space: nowrap;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
