--- a/fn/src/index.css
+++ b/fn/src/index.css
@@ -24,7 +24,7 @@ button{
 	outline: 'inherit';
 }
 
-p, h1, h2, h3, h4, h5, h6{
+p, h1, h2, h3, h4{
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
