--- a/fn/src/index.css
+++ b/fn/src/index.css
@@ -6,9 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
-  background-color: #EFF2F7;
+  background-color: #fff  ;
 }
-
+/* EFF2F7 */
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
