--- a/fn/src/index.css
+++ b/fn/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
-  background-color: #fff  ;
+  background-color: #EFF2F7;
 }
 /* EFF2F7 */
 code {
